--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,7 +1,7 @@
 # 数据格式可以为 yaml(文件以.yml结尾) 或者json(文件以.json结尾)
 # 如果YAML格式的数据请先检查格式是否有误，可选检查工具 http://www.yamllint.com
 
-title: 卜亚风简历
+title: 卜亚风-数据科学-深圳
 lang: zh #语言设置 zh表示中文 en 表示英语
 name: 卜亚风
 jobtitle: 数据科学 #可空不显示
@@ -19,29 +19,51 @@ contact: #联系方式连接等3~5行
 #main下面是主体内容，类别条数不限
 main: #简历主要内容，
 - type: education #类别为ID
-  name: 教育 #显示名称，空则使用type
+  name: 教育背景 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
   - title: 西安邮电大学
     sub: 智能科学与技术｜学士
     duration: 2013年9月 - 2017年7月
     detail: 主修课程：概率论与随机过程、计算机网络、算法设计与分析、机器学习、模式识别、自然语言理解等。
 
-- type: 技能
-  # name: 技术栈和编程语言
+- type: skill
+  name: 个人技能
   content:
-  - title: 技术栈与编程语言
+  - title: 开发技能
+    summary: 开发技能summary
     items: #itmems 可以小块的方式显示
-    - 编程语言：SQL
+    - SQL
     - Python
-    - Hive
-    - Spark
+    - 网络协议
+    - 工程素养
+    detail: 了解TCP/IP、HTTP等网络协议<br/>
+            熟练使用Pycharm、Vscode等开发工具，及Git版本管理工具<br/>
+  - title: 数据技能
+    items:
+    - SQL
+    - 数据分析
     - 数据可视化
-  - title: 个人技能总结
-    detail:  1. 有画像业务的完整项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略<br>
-             2. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如留存、漏斗、人群分析、RFM模型等<br>
-             3. 了解各类数据建模方法，如线性回归、SHAP value、逻辑回归、决策树以及因果分析的框架和要素<br>
-             4. 具备数据分析、大数据开发的能力，包含hive、spark、python等<br>
-             5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验
+    - 数据应用
+    - 业务应用
+    tags:
+    - 数据加工
+    - Prompt设计
+    - 模型微调
+    - 模型评测
+    summary: Pandas/Numpy数据处理，Matplotlib可视化
+    detail: 1. <br/>
+            5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验
+  - title:
+    summary: AI技能
+    detail: 1. 掌握llm落地技术，包括但不限于prompt设计、参数微调、模型评测等<br/>
+            2. 有大模型场景落地经验
+  - title:
+    summary: 其他
+    detail: 1. 有画像业务的完整项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略<br/>
+            2. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如留存、漏斗、人群分析、RFM模型等<br/>
+            3. 了解各类数据建模方法，如线性回归、SHAP value、逻辑回归、决策树以及因果分析的框架和要素<br/>
+            4. 具备数据分析、大数据开发的能力，包含hive、spark、python等<br/>
+            5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验
 
 - type: experience
   name: 工作经历
@@ -53,14 +75,14 @@ main: #简历主要内容，
     # - 数据挖掘
     # - 模型落地
     # summary: 职务或者工作总结(自动折叠)
-    detail: 负责大模型在数据分析领域的多个场景落地；<br> 以往负责业务安全平台的日常运营和部分中台的前端开发工作。
+    detail: 负责大模型在数据分析领域的多个场景落地；<br/> 以往负责业务安全平台的日常运营和部分中台的前端开发工作。
 
   - title: 中软国际科技服务有限公司
     sub: Python开发
     duration: 2017年2月 - 2019年2月
     tags:
     # summary: Python开发
-    detail: 负责网管产品U2000对应的模拟器项目的开发和版本维护工作；<br> 按照需求文档，完成模拟器管理平台的模块设计、开发工作。
+    detail: 负责网管产品U2000对应的模拟器项目的开发和版本维护工作；<br/> 按照需求文档，完成模拟器管理平台的模块设计、开发工作。
     open: open #可以设置open默认展开
   # - title: Job Title
   #   sub: Your 2nd, Inc.
@@ -81,10 +103,10 @@ main: #简历主要内容，
     - Prompt设计
     - 模型微调
     - 模型评测
-    summary: 项目描述：<br> 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）；<br> 2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
-    detail: 主要职责：<br> 1. 数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式；<br>
-            2. 模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型；<br>
-            3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果；<br>
+    summary: 项目描述：<br/> 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）；<br/> 2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
+    detail: 主要职责：<br/> 1. 数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式；<br/>
+            2. 模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型；<br/>
+            3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果；<br/>
             4. 验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
     open: open
     # items:
@@ -98,11 +120,11 @@ main: #简历主要内容，
     - Python
     - SQL
     - Echarts
-    summary: 项目描述：<br> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理，依赖于业务多年沉淀的风控画像以及多个场景的风控策略，快速实现业务安全防护。
-    detail: 主要职责：<br> 1. 后台开发：参与平台的风控模块开发，以及策略维护；<br>
-            2. 报表开发：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br>
-            3. 安全助理：关注星迹平台的相关告警，联系相关负责人推进修复，直至告警闭环；<br>
-            4. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；<br>
+    summary: 项目描述：<br/> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理，依赖于业务多年沉淀的风控画像以及多个场景的风控策略，快速实现业务安全防护。
+    detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发，以及策略维护；<br/>
+            2. 报表开发：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
+            3. 安全助理：关注星迹平台的相关告警，联系相关负责人推进修复，直至告警闭环；<br/>
+            4. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；<br/>
             5. 知识沉淀：沉淀小助手的各类问题300+，以供用户FAQ。
     open: open
 
@@ -113,9 +135,9 @@ main: #简历主要内容，
     - Python网络编程
     - 通信协议
     - Flask
-    summary: 项目描述：<br> 1. 模拟器开发：模拟基站与网管之间的交互；<br> 2. 版本管理：模拟器版本的web界面管理，远程维护，以及对外租赁。
-    detail: 主要职责：<br> 1. 模块开发：负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；<br>
-            2. 需求设计：负责模拟器版本管理web网站的设计；<br>
+    summary: 项目描述：<br/> 1. 模拟器开发：模拟基站与网管之间的交互；<br/> 2. 版本管理：模拟器版本的web界面管理，远程维护，以及对外租赁。
+    detail: 主要职责：<br/> 1. 模块开发：负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；<br/>
+            2. 需求设计：负责模拟器版本管理web网站的设计；<br/>
             3. 全栈开发：独立完成版本管理平台的前后端开发。
     open: open
    #可继续添加更多内容
