--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -30,7 +30,7 @@ main: #简历主要内容，
   name: 个人技能
   content:
   - title: 技术
-    items: #itmems 可以小块的方式显示
+    itmems: #itmems 可以小块的方式显示
     - SQL
     - Python
     - 数据分析
@@ -40,17 +40,19 @@ main: #简历主要内容，
     summary: Python开发、数据分析、AI
     detail: 1. 熟练掌握Python编程，可使用SQL/Pandas/Numpy/Matplotlib等数据处理工具；<br/>
             2. 了解TCP/IP、HTTP等网络协议，熟悉Linux常用命令；<br/>
-            3. 熟练掌握常用的数据结构和算法，有一定的工程素养；<br/>
+            3. 熟练掌握常用的数据结构和算法，有一定的工程素养，技术栈丰富；<br/>
             4. 熟练使用Pycharm、Vscode等开发工具，及Git版本管理工具；<br/>
             5. 有大模型场景落地经验，熟悉数据加工、Prompt设计、模型微调、模型评测等技术。
     open: open
   - title: 综合
+    tags:
+    - 好奇心
+    - 学习
     summary: 其他
     detail: 1. 对新技术充满好奇，勇于探索，敢于尝试；<br/>
             2. 对数字比较敏感，喜欢和数据打交道，严谨细致，有较强的分析和逻辑推理能力；<br/>
-            # 3. 了解各类数据建模方法，如线性回归、SHAP value、逻辑回归、决策树以及因果分析的框架和要素<br/>
-            3. 空闲时间，参与多项公益项目，同时考取了PMP证书。
-            # 5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验
+            3. 空闲时间，参与多项公益项目，同时考取了PMP证书；<br/>
+            4. 工作认真负责、勇于担当、执行力强、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验。
     open: open
 
 - type: experience
@@ -97,9 +99,6 @@ main: #简历主要内容，
             3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果；<br/>
             4. 验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
     open: open
-    # items:
-    # - item1
-    # - item2
 
   - title: 星迹-业务安全风控平台
     sub: 运营开发
