--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -30,14 +30,13 @@ main: #简历主要内容，
   name: 个人技能
   content:
   - title: 技术
-    itmems: #itmems 可以小块的方式显示
+    # itmems: #itmems 可以小块的方式显示
+    tags:
     - SQL
     - Python
-    - 数据分析
-    - 数据可视化
-    - 业务应用
+    - 数据分析/可视化/业务应用
     - 大模型场景落地
-    summary: Python开发、数据分析、AI
+    summary: Python开发、数据挖掘、AI
     detail: 1. 熟练掌握Python编程，可使用SQL/Pandas/Numpy/Matplotlib等数据处理工具；<br/>
             2. 了解TCP/IP、HTTP等网络协议，熟悉Linux常用命令；<br/>
             3. 熟练掌握常用的数据结构和算法，有一定的工程素养，技术栈丰富；<br/>
@@ -45,10 +44,6 @@ main: #简历主要内容，
             5. 有大模型场景落地经验，熟悉数据加工、Prompt设计、模型微调、模型评测等技术。
     open: open
   - title: 综合
-    tags:
-    - 好奇心
-    - 学习
-    summary: 其他
     detail: 1. 对新技术充满好奇，勇于探索，敢于尝试；<br/>
             2. 对数字比较敏感，喜欢和数据打交道，严谨细致，有较强的分析和逻辑推理能力；<br/>
             3. 空闲时间，参与多项公益项目，同时考取了PMP证书；<br/>
