--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -34,9 +34,10 @@ main: #简历主要内容，
     tags:
     - SQL
     - Python
-    - 数据分析/可视化/业务应用
-    - 大模型场景落地
-    summary: Python开发、数据挖掘、AI
+    - 数据分析
+    - 可视化
+    - 大模型
+    # summary: Python开发、数据挖掘、大模型
     detail: 1. 熟练掌握Python编程，可使用SQL/Pandas/Numpy/Matplotlib等数据处理工具；<br/>
             2. 了解TCP/IP、HTTP等网络协议，熟悉Linux常用命令；<br/>
             3. 熟练掌握常用的数据结构和算法，有一定的工程素养，技术栈丰富；<br/>
