--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -103,12 +103,10 @@ main: #简历主要内容，
     - Python
     - SQL
     - Echarts
-    summary: 项目描述：<br/> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理，依赖于业务多年沉淀的风控画像以及多个场景的风控策略，快速实现业务安全防护。
+    summary: 项目描述：<br/> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理。
     detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发，以及策略维护；<br/>
             2. 报表开发：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
-            3. 安全助理：关注星迹平台的相关告警，联系相关负责人推进修复，直至告警闭环；<br/>
-            4. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；<br/>
-            5. 知识沉淀：沉淀小助手的各类问题300+，以供用户FAQ。
+            3. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；沉淀小助手的各类问题300+，以供用户FAQ。
     open: open
 
   - title: 模拟器开发及版本管理
