--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -45,23 +45,21 @@ main: #简历主要内容，
             5. 有大模型场景落地经验，熟悉数据加工、Prompt设计、模型微调、模型评测等技术。
     open: open
   - title: 综合
-    detail: 1. 对新技术充满好奇，勇于探索，敢于尝试；<br/>
-            2. 对数字比较敏感，喜欢和数据打交道，严谨细致，有较强的分析和逻辑推理能力；<br/>
-            3. 空闲时间，参与多项公益项目，同时考取了PMP证书；<br/>
-            4. 工作认真负责、勇于担当、执行力强、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验。
+    detail: 1. 对新技术充满好奇，勇于探索，敢于尝试；有较强的分析和逻辑推理能力；<br/>
+            2. 工作认真负责、勇于担当、执行力强；能力综合，有项目管理和运营经验。
     open: open
 
 - type: experience
   name: 工作经历
   content:
   - title: 亿达信息技术有限公司
-    sub: 数据挖掘
+    sub: 数据挖掘&平台开发
     duration: 2019年3月 - 至今
     tags:
     # - 数据挖掘
     # - 模型落地
     # summary: 职务或者工作总结(自动折叠)
-    detail: 负责大模型在数据分析领域的多个场景落地；<br/> 以往负责业务安全平台的日常运营和部分中台的前端开发工作。
+    detail: 负责大模型在数据分析领域的多个场景的研究和应用落地；<br/> 参与业务安全平台的建设和业务安全策略开发工作。
 
   - title: 中软国际科技服务有限公司
     sub: Python开发
@@ -90,10 +88,10 @@ main: #简历主要内容，
     - 模型微调
     - 模型评测
     summary: 项目描述：<br/> 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）；<br/> 2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，降低数据分析的门槛。
-    detail: 主要职责：<br/> 1. 数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式；<br/>
-            2. 模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型；<br/>
+    detail: 主要职责：<br/> 1. 数据构造：对业务方提供的数据，进行清洗加工，整理成模型需要的格式；<br/>
+            2. 模型选型：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型；<br/>
             3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果；<br/>
-            4. 验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
+            4. 优化迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
     open: open
 
   - title: 星迹-业务安全风控平台
@@ -103,10 +101,13 @@ main: #简历主要内容，
     - Python
     - SQL
     - Echarts
+    - 数据分析
+    - 安全策略
     summary: 项目描述：<br/> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理。
-    detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发，以及策略维护；<br/>
-            2. 报表开发：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
-            3. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；沉淀小助手的各类问题300+，以供用户FAQ。
+    detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发，以及部分策略开发；<br/>
+            2. 策略对抗：对黑产数据进行分析，策略优化；<br/>
+            3. 数据可视化：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
+            4. 业务运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；沉淀小助手的各类问题300+，以供用户FAQ。
     open: open
 
   - title: 模拟器开发及版本管理
