--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,7 +1,7 @@
 # 数据格式可以为 yaml(文件以.yml结尾) 或者json(文件以.json结尾)
 # 如果YAML格式的数据请先检查格式是否有误，可选检查工具 http://www.yamllint.com
 
-title: 卜亚风-数据科学-深圳
+title: 卜亚风-数据挖掘-深圳
 lang: zh #语言设置 zh表示中文 en 表示英语
 name: 卜亚风
 jobtitle: 数据科学 #可空不显示
@@ -95,7 +95,7 @@ main: #简历主要内容，
     open: open
 
   - title: 星迹-业务安全风控平台
-    sub: 运营开发
+    sub: 运营开发&数据挖掘
     duration: 2019年3月 - 2023年2月
     tags:
     - Python
@@ -104,10 +104,10 @@ main: #简历主要内容，
     - 数据分析
     - 安全策略
     summary: 项目描述：<br/> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理。
-    detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发，以及部分策略开发；<br/>
-            2. 策略对抗：对黑产数据进行分析，策略优化；<br/>
+    detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发；<br/>
+            2. 策略对抗：对业务数据进行分析，识别异常流量，然后进行策略开发；<br/>
             3. 数据可视化：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
-            4. 业务运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；沉淀小助手的各类问题300+，以供用户FAQ。
+            4. 业务运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；经过沉淀形成FAQ，以供用户使用。
     open: open
 
   - title: 模拟器开发及版本管理
