--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -4,7 +4,7 @@
 title: 卜亚风-数据挖掘-深圳
 lang: zh #语言设置 zh表示中文 en 表示英语
 name: 卜亚风
-jobtitle: 数据科学 #可空不显示
+jobtitle: 数据挖掘 #可空不显示
 photo: assets/img/me.jpg #照片可空，不显示
 
 #联系方式
@@ -120,7 +120,7 @@ main: #简历主要内容，
     summary: 项目描述：<br/> 1. 模拟器开发：模拟基站与网管之间的交互；<br/> 2. 版本管理：模拟器版本的web界面管理，远程维护，以及对外租赁。
     detail: 主要职责：<br/> 1. 模块开发：负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；<br/>
             2. 需求设计：负责模拟器版本管理web网站的设计；<br/>
-            3. 全栈开发：独立完成版本管理平台的前后端开发。
+            3. 全栈开发：独立完成版本管理平台的全栈开发。
     open: open
    #可继续添加更多内容
 
@@ -132,6 +132,8 @@ others: #其他列表显示
   -
   - title: 奖项
     text: 腾讯微创新奖｜腾讯出行服务：抗疫公益互助
+  - title: 证书
+    text: PMP｜项目管理证书
   #   items: #单行列表
   #   - 睡觉
   #   - 吃饭
