--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -103,7 +103,7 @@ main: #简历主要内容，
     - Echarts
     - 数据分析
     - 安全策略
-    summary: 项目描述：<br/> 一站式安全运营平台，提供业务安全一站式接入，可视化策略编排，策略版本控制，实现全链路的监控和运营数据管理。
+    summary: 项目描述：<br/> 一站式安全运营平台，提供业务接入，可视化策略编排，策略版本控制，实现全链路的监控和运营数据管理。
     detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发；<br/>
             2. 策略对抗：对业务数据进行分析，识别异常流量，然后进行策略开发；<br/>
             3. 数据可视化：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
