--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ subject-width: 14% #左边栏宽度
 print:
   # 打印样式模板,
   # 空不设置打印样式，模板变量无效
-  # basic:网页基本一致，
+  basic: 网页基本一致，
   # flex: 侧栏密集排版，
   # block:无侧栏
   template: 'flex'
@@ -22,6 +22,7 @@ print:
   section:
     margin: '3px auto 0' #边距
     padding: '3px 0' #内部偏移
+    # width: '92%' #内容宽度 basic无效
   # content每一条边距设置
   block-margin: 4px 0
   #打印版页脚设置
