--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -14,7 +14,7 @@ contact: #联系方式连接等3~5行
   icon: icons/email.svg #图标 svg文件
 - text: +86 15029074256
   icon: icons/phone.svg
-- text: +86 15029074256
+- text: https://github.com/kyod-bu/
   icon: icons/github.svg
   href: https://github.com/kyod-bu/
   attr: target="_blank" #新标签页打开
