--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -103,14 +103,15 @@ main: #简历主要内容，
     tags:
     - Python
     - SQL
-    - Echarts
+    - 数据可视化
     - 数据分析
     - 安全策略
-    summary: 项目描述：<br/> 一站式安全运营平台，提供业务接入，可视化策略编排，策略版本控制，实现全链路的监控和运营数据管理。
-    detail: 主要职责：<br/> 1. 后台开发：参与平台的风控模块开发；<br/>
-            2. 策略对抗：对业务数据进行分析，识别异常流量，然后进行策略开发；<br/>
-            3. 数据可视化：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理；<br/>
-            4. 业务运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；经过沉淀形成FAQ，以供用户使用。
+    summary: 项目描述：<br/> 一站式安全运营平台，为业务各种场景（账户安全、营销活动、内容生态安全、反赌反诈等）提供安全解决方案。年度减损9000万以上。<br/> 1. 提供业务接入，可视化策略编排，策略版本控制，实现全链路的监控和运营数据管理。<br/> 2. 在平台的使用过程中，积累了大量风控专用的特征数据，结合“终端特征、图模型、行为时序、多模态”等技术，形成了完备的风险防控闭环。
+    detail: 主要职责：<br/> 1. 后台开发：负责接入层的开发，即接收业务在关键路径上的请求，对于有风险的操作，执行策略判定，并将结果返回给策略引擎，用于策略的执行和判定，以及后续的打击阻断操作；<br/>
+            2. 策略对抗：对业务配置的策略按逻辑进行判定并执行打击阻断操作；<br/>
+            3. 风险分析：分维度特征可视化展示业务风险场景分布情况，以便于制定和完善规则策略；<br/>
+            4. 数据可视化：借助一些支撑平台，创建门户，进行相关业务的看板报表开发及推送管理；<br/>
+            5. 业务运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题；经过沉淀形成FAQ，以供用户使用。
     open: open
 
   - title: 模拟器开发及版本管理
