--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -9,7 +9,8 @@ photo: assets/img/me.jpg #照片可空，不显示
 
 #联系方式
 contact: #联系方式连接等3~5行
-- text: yafengbu@gmail.com #文本内容，另一个邮箱 751019439@qq.com
+# - text: yafengbu@gmail.com #文本内容，另一个邮箱 751019439@qq.com
+- text: 751019439@qq.com
   # href: mailto:yafengbu@gmail.com #链接，无链接则空
   icon: icons/email.svg #图标 svg文件
 - text: +86 15029074256
